--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
